# kino-rivenorm-microservice

./: Dockerfile  README.md  README.rst  __init__.py  app.py  pyproject.toml  requirements.txt
brain/: star.rive
src/: normalization_server.py
