[tool.poetry]
name = "kino-rivenorm-microservice"
version = "2.0.0"
description = "Webservice REST para normalizar mensagens usando Rivescript."
authors = ["Thiago Carvalho D'Ávila <thiagocavila@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/staticdev/enelvo-microservice"
repository = "https://github.com/staticdev/enelvo-microservice"

[tool.poetry.dependencies]
python = "^3.8"
rivescript = "^1.15.0"
grpcio = "^1.35.0"
protobuf = "^3.15.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
